--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -59,3 +59,13 @@ a{
 .pos-a {
   position: absolute;
 }
+.topic-dry{
+  margin-bottom: 20px;
+  padding: 20px;
+  background-color: #EEE;
+  border-radius: 18px;
+  line-height: 1.5;
+}
+.result{
+  margin-top: 20px;
+}
